--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-![logo-h](https://user-images.githubusercontent.com/34670018/231368487-e7c3cb78-1f6c-4a1e-9abd-8af4807a7fdc.png)
+![logo-h](./public/images/NbI4TPfANLEoIqt1Md1na72e_SDNGVIalB_8t2OSi_E=.png)
+
 
 # Manifesto for Open Socialism:
 
